--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -115,5 +115,6 @@
   "window.settings.menu.description": "Menu view, position and items",
   "window.settings.files.description": "Size, archives, start directory, hidden files and more",
   "window.settings.language.description": "Language and time formats",
-  "window.settings.back-to-menu": "Back to menu"
+  "window.settings.back-to-menu": "Back to menu",
+  "window.settings.files.display-directories-before-files": "Display directories before files"
 }
