Added setting to modify icons page
Added setting to modify icons page

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -156,5 +156,6 @@
   "window.properties.permissions.acl.read-acl": "Read ACL",
   "window.properties.permissions.acl.write-acl": "Write ACL",
   "window.properties.permissions.acl.write-owner": "Write owner",
-  "window.properties.permissions.acl.synchronize": "Synchronize"
+  "window.properties.permissions.acl.synchronize": "Synchronize",
+  "window.settings.menu.icons-page": "Icons page"
 }
