Added ability to check image properties
Added ability to check image properties

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -157,5 +157,41 @@
   "window.properties.permissions.acl.write-acl": "Write ACL",
   "window.properties.permissions.acl.write-owner": "Write owner",
   "window.properties.permissions.acl.synchronize": "Synchronize",
-  "window.settings.menu.icons-page": "Icons page"
+  "window.settings.menu.icons-page": "Icons page",
+  "window.properties.image": "Image: ",
+  "window.properties.image.type": "Type: ",
+  "window.properties.image-properties": "Image Properties",
+  "window.properties.image.width": "Width: ",
+  "window.properties.image.height": "Height: ",
+  "window.properties.image.has-alpha": "Has alpha: ",
+  "window.properties.image.camera": "Camera: ",
+  "window.properties.image.orientation": "Orientation: ",
+  "window.properties.image.software": "Software: ",
+  "window.properties.image.iso": "ISO: ",
+  "window.properties.image.f-number": "Aperture: ",
+  "window.properties.image.compression": "Compression: ",
+  "window.properties.image.gps-width": "GPS Width: ",
+  "window.properties.image.gps-height": "GPS Height: ",
+  "window.properties.image.gps-date": "GPS Date: ",
+  "window.properties.image.gps-time": "GPS Time: ",
+  "utils.yes": "Yes",
+  "utils.no": "No",
+  "window.properties.image.camera-mode": "Camera mode: ",
+  "window.properties.image.orientation.normal": "Normal",
+  "window.properties.image.orientation.mirror-horizontal": "Mirror horizontal",
+  "window.properties.image.orientation.rotate-180": "Rotate 180°",
+  "window.properties.image.orientation.mirror-vertical": "Mirror vertical",
+  "window.properties.image.orientation.rotate-90-right-mirror": "Rotate 90° right and mirror",
+  "window.properties.image.orientation.rotate-90-right": "Rotate 90° right",
+  "window.properties.image.orientation.rotate-90-left-mirror": "Rotate 90° left and mirror",
+  "window.properties.image.orientation.rotate-90-left": "Rotate 90° left",
+  "window.properties.image.camera-mode.manual": "Manual",
+  "window.properties.image.camera-mode.auto": "Auto",
+  "window.properties.image.camera-mode.aperture-priority": "Aperture Priority",
+  "window.properties.image.camera-mode.shutter-priority": "Shutter Priority",
+  "window.properties.image.camera-mode.creative-mode": "Creative Mode",
+  "window.properties.image.camera-mode.action-mode": "Action Mode",
+  "window.properties.image.camera-mode.portrait": "Portrait",
+  "window.properties.image.camera-mode.landscape": "Landscape",
+  "window.properties.image.camera-mode.other": "Other"
 }
