--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -194,5 +194,11 @@
   "window.properties.image.camera-mode.portrait": "Portrait",
   "window.properties.image.camera-mode.landscape": "Landscape",
   "window.properties.image.camera-mode.other": "Other",
-  "context-menu.cut": "Cut"
+  "context-menu.cut": "Cut",
+  "window.settings.menu.item-info": "Item info",
+  "menu.icon": "Icon: ",
+  "menu.path": "Path: ",
+  "menu.title": "Title: ",
+  "window.settings.menu.edit-order": "Edit order",
+  "window.settings.menu.select-item": "Select item to show info"
 }
