--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -56,17 +56,17 @@
   "window.about.used-icons": "This app use icons from:",
   "window.about.warranty": "This program comes with absolutely no warranty.",
   "window.about.website": "Project Website",
-  "window.archive.compress": "Use Compress",
   "window.archive.compress.error": "Error while compress!",
   "window.archive.compress.success": "Compression successfully!",
-  "window.archive.extract.enter-password": "Enter password:",
   "window.archive.extract.error": "Error while extraction!",
   "window.archive.extract.success": "Extraction successfully!",
   "window.archive.extract.title": "Extract Archive",
   "window.archive.extract.wrong-password": "Wrong password!",
-  "window.archive.file-name": "File name:",
-  "window.archive.password": "Use password",
-  "window.archive.title": "Create Archive",
+  "window.interior.archive.name": "File name",
+  "window.interior.archive.password": "Password",
+  "window.interior.archive": "Archive",
+  "window.interior.archive.title": "Create Archive",
+  "window.interior.archive.create": "Create",
   "window.decision.combine-directory": "Combine folders",
   "window.decision.copy-next-to": "Copy next to",
   "window.decision.destination-has-directory": "The destination already has a directory named: ",
