Added option in settings to choose trash location
Added option in settings to choose trash location

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -224,5 +224,7 @@
   "window.interior.menu.icon": "Icon",
   "utils.copy": "Copy",
   "window.other.chose-directory": "Chose Folder",
-  "window.other.chose-file": "Chose File"
+  "window.other.chose-file": "Chose File",
+  "utils.example-path": "/example/path",
+  "window.settings.files.trash-location": "Trash location"
 }
