--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -30,12 +30,13 @@
   "navigate.dark-mode": "Dark Mode",
   "navigate.hidden-files": "Hidden files",
   "navigate.light-mode": "Light Mode",
-  "navigate.reload": "Refresh",
+  "tooltip.navigate.reload": "Refresh",
+  "tooltip.navigate.options": "Show options",
   "navigate.settings": "Settings",
   "root.title": "Files",
-  "tooltip.navigate-next": "Next Directory",
-  "tooltip.navigate-parent": "Parent Directory",
-  "tooltip.navigate-prev": "Previous Directory",
+  "tooltip.navigate.next": "Next Directory",
+  "tooltip.navigate.parent": "Parent Directory",
+  "tooltip.navigate.previous": "Previous Directory",
   "units.bytes": " bytes",
   "utils.left": "Left",
   "utils.right": "Right",
