--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -33,12 +33,13 @@
   "navigate.dark-mode": "Tryb ciemny",
   "navigate.hidden-files": "Ukryte pliki",
   "navigate.light-mode": "Tryb jasny",
-  "navigate.reload": "Odśwież",
+  "tooltip.navigate.reload": "Odśwież",
+  "tooltip.navigate.options": "Wyświel opcje",
   "navigate.settings": "Ustawienia",
   "root.title": "Pliki",
-  "tooltip.navigate-next": "Następny katalog",
-  "tooltip.navigate-parent": "Katalog nadrzędny",
-  "tooltip.navigate-prev": "Poprzedni katalog",
+  "tooltip.navigate.next": "Następny katalog",
+  "tooltip.navigate.parent": "Katalog nadrzędny",
+  "tooltip.navigate.previous": "Poprzedni katalog",
   "units.bytes": " bajty",
   "utils.left": "Lewy",
   "utils.right": "Prawy",
