--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -3,7 +3,7 @@
   "button.cancel": "Cancel",
   "button.close": "Close",
   "button.create": "Create",
-  "button.exit": "Exit",
+  "button.confirm": "Exit",
   "button.extract": "Extract",
   "button.copy": "Copy",
   "confirm.skip.copy": "Confirm skipping pending operations",
@@ -227,5 +227,8 @@
   "window.other.chose-directory": "Chose Folder",
   "window.other.chose-file": "Chose File",
   "utils.example-path": "/example/path",
-  "window.settings.files.trash-location": "Trash location"
+  "window.settings.files.trash-location": "Trash location",
+  "window.settings.confirm.title": "Application restart required",
+  "window.settings.confirm.description": "Application restart required for settings to take effect",
+  "button.restart": "Restart"
 }
