Added option to switch between grid and list view from navigation panel.
Added option to switch between grid and list view from navigation panel.

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -27,7 +27,8 @@
   "context-menu.rename": "Rename",
   "context-menu.select-all": "Select All",
   "navigate.about-button": "About Files",
-  "navigate.dark-mode": "Dark Mode",
+  "tooltip.navigate.view.list": "Change view to Grid",
+  "tooltip.navigate.view.grid": "Change view to List",
   "navigate.hidden-files": "Hidden files",
   "navigate.light-mode": "Light Mode",
   "tooltip.navigate.reload": "Refresh",
