Added duplicating progress view
Added duplicating progress view

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -236,6 +236,7 @@
   "task.copying": "Copying ",
   "task.cutting": "Cutting ",
   "task.deleting": "Deleting ",
+  "task.duplicating": "Duplicating ",
   "task.item-to": " item to ",
   "task.item-from": " item from ",
   "task.items-to": " items to ",
