Added dark mode for properties window
Added dark mode for properties window

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -243,5 +243,6 @@
   "task.items-to": " items to ",
   "task.items-from": " items from ",
   "tooltip.navigate.tasks": "Show running tasks",
-  "context-menu.empty": "Empty trash"
+  "context-menu.empty": "Empty trash",
+  "window.properties.checksum.generating": "Generating..."
 }
