Added dark mode for archive password prompt window
Added dark mode for archive password prompt window, moved code responsible for password prompt window to separate class

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -58,7 +58,6 @@
   "window.archive.compress.success": "Compression successfully!",
   "window.archive.extract.error": "Error while extraction!",
   "window.archive.extract.success": "Extraction successfully!",
-  "window.archive.extract.title": "Extract Archive",
   "window.archive.extract.wrong-password": "Wrong password!",
   "window.interior.archive.name": "File name",
   "window.interior.archive.password": "Password",
@@ -109,7 +108,8 @@
   "window.settings.files.view": "View",
   "window.settings.files.view.grid": "Grid",
   "window.settings.files.view.list": "List",
-  "window.archive.extract.password-required": "The archive is password protected",
+  "window.interior.archive.extract.password-required": "This archive is password protected",
+  "window.interior.archive.extract.enter-password": "Enter password",
   "window.settings.language": "Language",
   "window.settings.menu.description": "Menu view, position and items",
   "window.settings.files.description": "Size, archives, start directory, hidden files and more",
