Added option in settings to choose whether to use single or double click to open a file
Added option in settings to choose whether to use single or double click to open a file

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -249,5 +249,7 @@
   "window.properties.item": " item",
   "window.file-box.modified": "Modified",
   "window.file-box.size": "Size",
-  "window.file-box.name": "Name"
+  "window.file-box.name": "Name",
+  "window.settings.files.use-double-click": "Use double click to open file",
+  "window.confirm.confirm-action": "Confirm action"
 }
