Added option in settings to unpack archive after click on it
Added option in settings to unpack archive after click on it

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -251,5 +251,6 @@
   "window.file-box.size": "Size",
   "window.file-box.name": "Name",
   "window.settings.files.use-double-click": "Use double click to open file",
-  "window.confirm.confirm-action": "Confirm action"
+  "window.confirm.confirm-action": "Confirm action",
+  "window.settings.files.extract-on-click": "Extract archive after click"
 }
