Added ability to check video properties in properties window
Added ability to check video properties in properties window

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -80,7 +80,7 @@
   "window.properties.file-path": "Path: ",
   "window.properties.file-properties": "File Properties",
   "window.properties.file-size": "Size: ",
-  "window.properties.file-type": "Type: ",
+  "window.properties.media.type": "Type: ",
   "window.properties.folder": "Folder",
   "window.properties.folder-contents": "Contents: ",
   "window.properties.folder-properties": "Folder Properties",
@@ -136,11 +136,13 @@
   "window.properties.permissions.read": "Read: ",
   "window.properties.permissions.write": "Write: ",
   "window.properties.permissions.execute": "Execute: ",
+  "window.properties.permissions.chose-user": "Chose user: ",
   "window.properties.permissions.owner": "Owner: ",
   "window.properties.permissions.group": "Group: ",
   "window.properties.permissions.other": "Other: ",
   "window.properties.permissions.update": "Update",
   "window.properties.permissions.apply-to-subdirectories": "Apply to subdirectories",
+  "window.properties.permissions.modify-permissions": "Modify permissions",
   "window.properties.permissions.acl.read-data": "Read data",
   "window.properties.permissions.acl.write-data": "Write data",
   "window.properties.permissions.acl.append-data": "Append data",
@@ -157,21 +159,20 @@
   "window.properties.permissions.acl.synchronize": "Synchronize",
   "window.settings.menu.icons-page": "Icons page",
   "window.properties.image": "Image: ",
-  "window.properties.image.type": "Type: ",
   "window.properties.image-properties": "Image Properties",
-  "window.properties.image.width": "Width: ",
-  "window.properties.image.height": "Height: ",
+  "window.properties.media.width": "Width: ",
+  "window.properties.media.height": "Height: ",
   "window.properties.image.has-alpha": "Has alpha: ",
-  "window.properties.image.camera": "Camera: ",
+  "window.properties.media.camera": "Camera: ",
   "window.properties.image.orientation": "Orientation: ",
   "window.properties.image.software": "Software: ",
   "window.properties.image.iso": "ISO: ",
   "window.properties.image.f-number": "Aperture: ",
   "window.properties.image.compression": "Compression: ",
-  "window.properties.image.gps-width": "GPS Width: ",
-  "window.properties.image.gps-height": "GPS Height: ",
-  "window.properties.image.gps-date": "GPS Date: ",
-  "window.properties.image.gps-time": "GPS Time: ",
+  "window.properties.media.gps-width": "GPS Width: ",
+  "window.properties.media.gps-height": "GPS Height: ",
+  "window.properties.media.gps-date": "GPS Date: ",
+  "window.properties.media.gps-time": "GPS Time: ",
   "utils.yes": "Yes",
   "utils.no": "No",
   "window.properties.image.camera-mode": "Camera mode: ",
@@ -252,5 +253,16 @@
   "window.file-box.name": "Name",
   "window.settings.files.use-double-click": "Use double click to open file",
   "window.confirm.confirm-action": "Confirm action",
-  "window.settings.files.extract-on-click": "Extract archive after click"
+  "window.properties.video.codec": "Codec: ",
+  "window.settings.files.extract-on-click": "Extract archive after click",
+  "window.properties.file.show": "show",
+  "window.properties.video": "Video: ",
+  "window.properties.confirm.title": "No FFmpeg installed",
+  "window.properties.confirm.description": "Your device does not have FFmpeg installed, which is required to read information from video files",
+  "button.download": "Download",
+  "window.properties.video.duration": "Duration: ",
+  "window.properties.video-properties": "Video properties",
+  "window.properties.video.bitrate": "Bitrate: ",
+  "window.properties.video.fps": "FPS: ",
+  "window.properties.video.channel": "Channel: "
 }
